--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
 <h1>наш синхронизированный сайт</h1>
+<h2>Дима внес изменения на сайте!</h2>
 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
