--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,8 +19,30 @@
     <![endif]-->
   </head>
   <body>
-<h1>наш синхронизированный сайт</h1>
-<h2>Дима внес изменения на сайте!</h2>
+    <sectioon id="main_icons">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 "><img src = 'img/usd26.png'alt ="icon"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
+          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
+        </div>
+      </div>
+    </sectioon>
+    <section id="element">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 main_element">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
+          </div>         
+        </div>
+      </div>
+    </section>
 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
