--- a/index.html
+++ b/index.html
@@ -19,32 +19,9 @@
     <![endif]-->
   </head>
   <body>
-    <sectioon id="main_icons">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 "><img src = 'img/usd26.png'alt ="icon"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
-          <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 ""><img src = 'img/usd26.png'alt ="icon"></div>
-        </div>
-      </div>
-    </sectioon>
-    <section id="element">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 main_element">
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
-            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 in_element"></div>
-          </div>         
-        </div>
-      </div>
-    </section>
-
-
+    <div class="box">
+      
+    </div>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
